# xshuttle

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml  site.yml
assets/: default.json  xshuttle.default.json  xshuttle.schema.json
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  schema.rs  types.rs
crates/settings/: Cargo.toml
crates/settings/src/: error.rs  host.rs  lib.rs  nodes.rs  settings.rs  types.rs
crates/settings/src/loaders/: config.rs  mod.rs
crates/settings/src/sources/: config.rs  ssh.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs  linux.rs  macos.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs
extra/linux/: xshuttle-autostart.desktop  xshuttle.desktop
extra/macos/: com.athopen.xshuttle.plist
scripts/: install.sh  uninstall.sh
site/: index.html  package-lock.json  package.json  vite.config.js
site/src/: style.css
src/: app.rs  asset.rs  config.rs  main.rs  ssh.rs  xshuttle.rs
src/terminal/: linux.rs  macos.rs  mod.rs
