[package]
name = "xshuttle"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/athopen/xshuttle"
description = "Command menu in your system tray"

[dependencies]
clap = { workspace = true }
tray = { workspace = true }
config = { workspace = true }
terminal = { workspace = true }
ssh = { workspace = true }
tao = { workspace = true }
open = { workspace = true }

[lints]
workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# UI & Platform
tray-icon = "0.21.2"
tao = "0.34.5"

# Image
image = { version = "0.25", default-features = false, features = ["png"] }

# SSH
ssh2-config = "0.6"
which = "8.0.0"

# Config & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.28"
dirs = "6.0"
open = "5.3.3"

# Internal crates
tray = { path = "crates/tray" }
config = { path = "crates/config" }
terminal = { path = "crates/terminal" }
ssh = { path = "crates/ssh" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "z"
panic = "abort"
