[package]
name = "xshuttle"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/athopen/xshuttle"
description = "Command menu in your system tray"

[dependencies]
clap = { workspace = true }
tray = { workspace = true }
config = { workspace = true }
terminal = { workspace = true }
ssh = { workspace = true }
winit = { workspace = true }
open = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"

[lints]
workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# UI & Platform
tray-icon = { version = "0.21.2", default-features = false }
winit = "0.30"

# Image
image = { version = "0.25", default-features = false, features = ["png"] }

# SSH
ssh2-config = "0.6"
which = "8.0.0"

# Config & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.28"
dirs = "6.0"
open = "5.3.3"

# Internal crates
tray = { path = "crates/tray" }
config = { path = "crates/config" }
terminal = { path = "crates/terminal" }
ssh = { path = "crates/ssh" }

[workspace.lints.rust]
# Safety
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"

# Code quality
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
# Lint groups (set priority -1 so individual lints can override)
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Restriction lints (selectively enabled)
allow_attributes_without_reason = "warn"
undocumented_unsafe_blocks = "warn"

# Allowed lints (with reasons)
# Internal crates don't need full crates.io metadata
cargo_common_metadata = "allow"
# Multiple crate versions come from transitive dependencies
multiple_crate_versions = "allow"
# Don't enforce #[must_use] on every function
must_use_candidate = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "z"
panic = "abort"
