[package]
name = "settings"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
dirs = { workspace = true }
ssh2-config = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
